k8s/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ski-website
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: nginx
        image: ghcr.io/schlagenkraft/web/ski-website:simple
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
